2007-02-20  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/exmpp_stringprep.erl: Catch up with original `stringprep' level
	of feature: a function to lowercase strings was added. Add functions
	if an identifier is a valid node, name or resource.

2007-02-19  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/exmpp_jid.erl: Reworked JID parsing to handle more error cases.
	Now, the resource for a bare JID is set to `undefined', not the empty
	string.

	* testsuite/check_jid.erl: The testsuite for the current state of
	`exmpp_jid' is complete.

2007-02-15  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/exmpp_stringprep.erl: New frontend for the exmpp_stringprep_drv
	port driver.

	* src/exmpp_internals.erl: New module which provide low-level
	functions for port drivers handling.

	* src/exmpp_sup.erl: Supervisor who is responsible for
	exmpp_stringprep startup.

	* src/exmpp.erl, ebin/exmpp.app.in: This module uses the `application'
	behaviour now. It starts `exmpp_sup'.

	* src/exmpp_jid.erl: New module which provides functions to manipulate
	JIDs.

	* src/Emakefile.in, src/Makefile.am, ebin/Makefile.am: Link each new
	modules to the build.

	* testsuite/check_jid.erl, testsuite/Emakefile.in,
	testsuite/Makefile.am: Add a first testsuite for `exmpp_jid'.

2007-02-06  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* c_src/uni_data.c, c_src/uni_norm.c, c_src/stringprep_uni_data.h,
	c_src/stringprep_uni_norm.h: Renamed as real headers.

	* c_src/stringprep_drv.c: Internal name of the driver changed to
	`exmpp_stringprep_erl'.

	* c_src/exmpp_stringprep_drv.c, c_src/exmpp_stringprep_drv.c,
	c_src/Makefile.am, src/stringprep.erl, priv/lib/Makefile.am: Prefixed
	`stringprep_drv' with `exmpp_' to avoid conflicts with ejabberd's own
	stringprep_drv. This permits exmpp to coexist with ejabberd.

2007-01-09  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* configure.ac: Next branch will be 0.7.
